# haskell-opengl

./: Chunk.hs  Main.hs  Matrix.hs  Shader.hs  haskell-opengl.cabal  stack.yaml
shaders/: Basic.frag  Basic.tesc  Basic.tese  Basic.vert
src/: Chunk.hs  Main.hs  Util.hs
