name:                haskell-opengl
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable haskell-opengl
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Matrix
                     , Util
                     , Shader
                     , Chunk
  build-depends:       base       >= 4.7      && < 5
                     , vector     >= 0.12.0.1 && < 1
                     , bytestring >= 0.10.8.2 && < 1
                     , OpenGLRaw  >= 3.3.0.0  && < 4
                     , GLFW-b     >= 1.4.8.2  && < 2
                     , hsnoise    >= 0.0.2    && < 1
                     , time       >= 1.9.1    && < 2
                     , random     >= 1.1      && < 2
